--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,27 @@
-  {
-      "name": "__MSG_ext_name__",
+{
+    "name": "__MSG_ext_name__",
     "version": "0.1",
     "description": "__MSG_ext_desc__",
     "permissions": [
-          "activeTab",
-          "downloads"
-        ],
+        "activeTab",
+        "downloads"
+    ],
     "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+        "scripts": [
+            "background.js"
+        ],
+        "persistent": false
     },
-    "browser_action":{
-      "default_icon": "images/browseraction.png",
-      "default_title": "__MSG_browser_action__"
-      },
+    "browser_action": {
+        "default_icon": "images/browseraction.png",
+        "default_title": "__MSG_browser_action__"
+    },
     "offline_enabled": true,
     "default_locale": "en",
     "icons": {
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+        "48": "images/icon48.png",
+        "128": "images/icon128.png"
     },
-    "manifest_version": 2
-  }
+    "manifest_version": 2,
+    "homepage_url": "https://1ce.org"
+}
